--- a/SyntaxTree/Makefile
+++ b/SyntaxTree/Makefile
@@ -9,8 +9,8 @@ parser.o:  bison.yy
 lex.o: flex.lex
 	flex++ flex.lex && g++ -c --std=c++11 lex.yy.cc -Wno-write-strings -o lex.o
 
-visitor.o: src/printer.cpp 
-	g++ -c --std=c++11 src/printer.cpp -o visitor.o
+visitor.o: src/pretty_printer.cpp 
+	g++ -c --std=c++11 src/pretty_printer.cpp -o visitor.o
 
 clean:
-	rm solution.o lex.o visitor.o parser.o parser parser.cpp tokens.h lex.yy.cc
+	rm  lex.yy.cc parser.cpp tokens.h lex.o visitor.o parser.o parser
